# df-pipeline

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: custom_transforms.py  test_etl_1.py
examples/config/: test_data_1.yaml
examples/data/: test_data_1.csv  test_data_2.csv
src/df_pipeline/: __init__.py  cli.py  column_transforms.py  filters.py  registry.py  schema.py  transforms.py
tests/: test_column_transforms.py  test_filters.py  test_integration.py  test_schema.py  test_select_dtypes.py  test_select_dtypes_2.py  test_transforms.py
