[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "df-pipeline"
version = "0.1.1"
description = "Declarative DataFrame transformation utilities for lightweight ETL pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/df_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/df_pipeline"]
